--- a/templates/app1/add_page.html
+++ b/templates/app1/add_page.html
@@ -4,7 +4,7 @@
 {% block body_block %}
 
     <div class="jumbotron gp-jumbotron">
-        <h1>Add a Place!</h1>
+        <h1>Add a new Place!</h1>
     </div>
 
     <div class="container-fluid gp-container-normal">
