--- a/templates/app1/division_detail.html
+++ b/templates/app1/division_detail.html
@@ -37,7 +37,7 @@
 
                         <div class="gp-slide-show">
                             <div class="gp-slide-shadow"></div>
-                            <div id="myCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
+                            <div id="storyCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
                                  data-ride="carousel">
                                 <!-- Wrapper for slides -->
 
@@ -52,14 +52,14 @@
                                 </div>
                                 <!-- Left and right controls -->
                                 <a class="left carousel-control" id="gp-carousel-control"
-                                   href="#myCarousel{{ forloop.counter }}"
+                                   href="#storyCarousel{{ forloop.counter }}"
                                    role="button"
                                    data-slide="prev">
                                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
                                 <a class="right carousel-control" id="gp-carousel-control"
-                                   href="#myCarousel{{ forloop.counter }}"
+                                   href="#storyCarousel{{ forloop.counter }}"
                                    role="button"
                                    data-slide="next">
                                     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
@@ -180,7 +180,7 @@
                         <div class="gp-slide-show">
 
                             <div class="gp-slide-shadow"></div>
-                            <div id="myCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
+                            <div id="placeCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
                                  data-ride="carousel">
                                 <!-- Wrapper for slides -->
                                 <div class="carousel-inner" role="listbox">
@@ -200,14 +200,14 @@
                                 </div>
                                 <!-- Left and right controls -->
                                 <a class="left carousel-control" id="gp-carousel-control"
-                                   href="#myCarousel{{ forloop.counter }}" role="button"
+                                   href="#placeCarousel{{ forloop.counter }}" role="button"
                                    data-slide="prev">
                                 <span class="glyphicon glyphicon-chevron-left"
                                       aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
                                 <a class="right carousel-control" id="gp-carousel-control"
-                                   href="#myCarousel{{ forloop.counter }}" role="button"
+                                   href="#placeCarousel{{ forloop.counter }}" role="button"
                                    data-slide="next">
                                 <span class="glyphicon glyphicon-chevron-right"
                                       aria-hidden="true"></span>
