Division page redesigned

--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -204,7 +204,7 @@
                                                 </h4>
                                                 <p class="card-text">{{ page.des }}</p>
                                             </div>
-                                            <div id="gp-Carousel{{ forloop.counter }}" class="carousel slide gp-carousel"
+                                            <div id="gp-carousel{{ forloop.counter }}" class="carousel slide gp-carousel"
                                                  data-ride="carousel">
                                                 <!-- Wrapper for slides -->
                                                 <div class="carousel-inner" role="listbox">
