--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -3,14 +3,13 @@
 {% block body_block %}
     <div class="jumbotron gp-jumbotron">
         <p>Welcome {{ user.username }}!</p>
-        <h1><a href="{% url 'story_share' %}" class="">
+        <h1><a  href="{% url 'story_share' %}" class="">
             <span class="glyphicon glyphicon-tree-conifer"></span>
             Share Your Tour Story
             <span class="glyphicon glyphicon-tree-deciduous"></span>
         </a>
         </h1>
     </div>
-
     <div class=" container-fluid gp-container-normal">
 
         <div class="row">
@@ -129,9 +128,11 @@
                                       class="gp-form-story-comment">
                                     {% csrf_token %}
                                     <div class="input-group">
-                                        <input class="form-control" type="text" id="text{{ forloop.counter }}" maxlength="1000" name="text" required>
+                                        <input class="form-control" type="text" id="text{{ forloop.counter }}"
+                                               maxlength="1000" name="text" required>
                                         <div class="input-group-btn">
-                                            <button class="btn btn-default" onclick="commentDiv({{ forloop.counter }})" type="submit">
+                                            <button class="btn btn-default" onclick="commentDiv({{ forloop.counter }})"
+                                                    type="submit">
                                                 <i class="glyphicon glyphicon-send"></i>
                                             </button>
                                         </div>
@@ -204,7 +205,8 @@
                                                 </h4>
                                                 <p class="card-text">{{ page.des }}</p>
                                             </div>
-                                            <div id="gp-carousel{{ forloop.counter }}" class="carousel slide gp-carousel"
+                                            <div id="gp-carousel{{ forloop.counter }}"
+                                                 class="carousel slide gp-carousel"
                                                  data-ride="carousel">
                                                 <!-- Wrapper for slides -->
                                                 <div class="carousel-inner" role="listbox">
@@ -279,7 +281,8 @@
                                     <div class="gp-ques-block">
                                         <h2 class="gp-ques-title">{{ obj.question }}</h2>
                                         <p class="gp-ques-date">{{ obj.created }}</p>
-                                        <p class="card-text-author">Asked by <a href="{% url 'user_profile' obj.author %}">{{ obj.author }}</a></p>
+                                        <p class="card-text-author">Asked by <a
+                                                href="{% url 'user_profile' obj.author %}">{{ obj.author }}</a></p>
 
                                     </div>
 
@@ -292,7 +295,9 @@
 
                                             {% for obj2 in obj.answers.all %}
                                                 <div class="gp-ques-ans-block">
-                                                <h4><a href="{% url 'user_profile' obj2.answered_by %}">{{ obj2.answered_by }}</a></h4>
+                                                    <h4>
+                                                        <a href="{% url 'user_profile' obj2.answered_by %}">{{ obj2.answered_by }}</a>
+                                                    </h4>
                                                     <h3 class="gp-ques-ans-text">{{ obj2.text }}</h3>
                                                     <p class="gp-ques-ans-date">{{ obj2.created }}</p>
                                                 </div>
@@ -312,9 +317,11 @@
                                             {{ hidden }}
                                         {% endfor %}
                                         <div class="input-group">
-                                            <input name="text" placeholder="Have you the answer?" class="form-control" equired>
+                                            <input name="text" placeholder="Have you the answer?" class="form-control"
+                                                   equired>
                                             <div class="input-group-btn">
-                                                <button id="bt{{ forloop.counter }}" class="btn btn-default" type="submit">
+                                                <button id="bt{{ forloop.counter }}" class="btn btn-default"
+                                                        type="submit">
                                                     <i class="glyphicon glyphicon-send"></i>
                                                 </button>
                                             </div>
@@ -453,6 +460,9 @@
                     $(totalLikeTxt).html(response.totalLikes);
                 }
             });
+        });
+        $("#button321").click(function () {
+            $("#item321").toggle();
         });
 
 
