--- a/templates/app1/profile.html
+++ b/templates/app1/profile.html
@@ -6,12 +6,34 @@
     </div>
 
     <div class="container-fluid gp-container-normal">
+
+           <div id="user_information ">
+               this is where we shall show a general information page like facebook with hovering pic and all
+
+               baki nicher tab gulare ekpashe side navigation bar er moto kore dis
+               <h1 class="alert-info"> Display_name =  {{ the_user.userprofile.display_name }}</h1>
+               <h1 class="alert-info"> Birthdate =     {{ the_user.userprofile.birth_date }}</h1>
+               <h1 class="alert-info"> Gender =  {{ the_user.userprofile.gender }}</h1>
+               <h1 class="alert-info"> Country =  {{ the_user.userprofile.country }}</h1>
+
+
+               {% if the_user.userprofile.image %}
+                    <img height="300" width="400" src="{{ the_user.userprofile.image.url }}">
+                {% endif %}
+
+                 <a href="{% url 'update_userprofile' user.id %}" class="btn btn-primary">Edit Your Profile </a>
+
+        </div>
+
         <ul class="nav nav-tabs gp-narrow-width gp-nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#user">User Information</a></li>
+            <li class="active"><a data-toggle="tab" href="#user">Account Information</a></li>
             <li><a data-toggle="tab" href="#tour">Tour Information</a></li>
+
         </ul>
 
-        <div class="tab-content gp-narrow-width gp-tab-content">
+
+
+        <div class="tab-content gp-narrow-width gp-tab-content ">
             <div id="user" class="tab-pane fade in active gp-tab-pane">
                 <form method="post" action=".">
 
@@ -35,27 +57,7 @@
                                value="{{ user_info.display_name }}"
                                disabled required>
                     </div>
-                    <div class="form-group">
-                        <label for="gender">Gender</label>
-                        <select class="form-control gp-editable" id="gender" name="gender" disabled>
-                            <option value="N" {% if user_info.gender == 'N' %} selected {% endif %}>No Gender Selected
-                            </option>
-                            <option value="M" {% if user_info.gender == 'M' %} selected {% endif %}>Male</option>
-                            <option value="F" {% if user_info.gender == 'F' %} selected {% endif %}>Female</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="birth_date">Birth Date</label>
-                        <input id="birth_date" type="date" class="form-control gp-editable" name="birth_date"
-                               value="{{ user_info.birth_date }}" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label for="country">Country</label>
-                        <input id="country" type="text" class="form-control gp-editable" name="country"
-                               value="{{ user_info.country }}"
-                               placeholder="Your Country"
-                               disabled>
-                    </div>
+
 
                     {% if the_user == request.user %}
                         <div class="gp-button-panel">
@@ -109,7 +111,6 @@
                     {% endif %}
                 </div>
             </div>
-
 
         </div>
 
