image share changed Profile view change Userprofile model changed

--- a/templates/app1/story_share_2.html
+++ b/templates/app1/story_share_2.html
@@ -1,6 +1,9 @@
 <div class="jumbotron gp-jumbotron">
     <h1>Share your experience with others!</h1>
 </div>
+{##}
+{#changed#}
+
 <div class="container-fluid gp-container-normal">
     <form class="gp-form" role="form" id="story_form" method="post" action="." enctype="multipart/form-data">
         <input type="hidden" name="csrfmiddlewaretoken"
