--- a/templates/app1/division_detail.html
+++ b/templates/app1/division_detail.html
@@ -36,6 +36,11 @@
 
                         {% for obj in stories %}
 
+                             {% if  obj.user.userprofile.image  %} <img src="{{ obj.user.userprofile.image.url }}" alt="No image shared" width="50" height="50"> {% else %}   <img src="/media/default-placeholder.png" class="img-circle" alt="Cinque Terre" width="50"
+                             height="50">{% endif %}<a
+                                        href="{% url 'user_profile' obj.user %}">{{ obj.user }}</a> with  <strong>{{ obj.member }}</strong> members.
+
+
                             <div class="gp-div-post-full">
 
                                 {% if obj.stories.all.exists %}
