--- a/templates/app1/forum.html
+++ b/templates/app1/forum.html
@@ -7,7 +7,19 @@
     </div>
 
     <div class="container-fluid gp-container-normal">
-
+    <div class="gp-side-panel">
+                    <form class="navbar-form navbar-left" method="post" action="{% url 'search_ques' %}">{% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" name="ques" class="form-control" placeholder="Search for Any Place">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+    </div>
+    <hr>
         <div class="gp-side-panel">
             <div class="gp-side-panel-title">
                 Have A Travel Query?
